# GameOfThrive

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/graphics/: render-object.hpp  renderer.hpp
src/: main.cpp
src/graphics/: renderer.cpp
